# bsu_famcs_4_course

./: README.md
ds-1/lab-1/: Dockerfile  README.md  main.py  requirements.txt  run.sh
ds-1/lab-1/financial_calc/: __init__.py
ds-1/lab-1/interface/: interface.py
ds-1/lab-2/: .env  Makefile  README.md  docker-compose.yml  requirements.txt
ds-1/lab-2/sql/: additional_tables.sql  init.sql
ds-1/lab-2/src/: app.py
ds-1/lab-2/src/data_proccesor/: __init__.py
ds-1/lab-2/src/templates/: add_row.html  delete_row.html  edit_row.html  index.html  table.html
ds-2/: lab-1.ipynb
ds-2/lab-2/: main.ipynb
ds-2/lab-3/: ds_3.ipynb
ds-2/lab-4/: ds-4.ipynb
iis/lab-2/: diabet.csv  iis-classifier.ipynb
iism/: lab-1.ipynb  lab-2.ipynb  lab-3.ipynb
kbrs/lab1/notebooks/: lab1.ipynb
kbrs/lab_2/: client.py  lab_2.md
kbrs/lab_2/client/: client.py
kbrs/lab_2/crypto/: aes.py  consts.py  rsa.py  utils.py
kbrs/lab_2/server/: datastore.py  server.py
pirv/lab_1/: .gitignore  CMakeLists.txt  main.cpp  parallel_inner_report.txt  parallel_outer_report.txt  sequence_report.txt
pirv/lab_1/python/: report.ipynb
pirv/lab_1/src/: matrix.cpp  matrix.h  timer.cpp  timer.h
pirv/lab_1/tests/: test_dummy.cpp  test_multiply.cpp
pirv/lab_3/: CMakeLists.txt  main.cpp
subd/lab_3/queries/: get_cow_info.sql  get_inactive_cows.sql  get_info_5_oldest.sql
subd/lab_4/: trigger_active_cows_on_milk_information.sql  trigger_daily_dairy.sql  trigger_update_restrictions.sql
